--- a/intro/style.css
+++ b/intro/style.css
@@ -29,4 +29,25 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
 
 .container {
   display: flex;
+  height: 100vh;
+  border: 10px solid #bada55;
+  align-items: flex-start;
+}
+
+.box {
+  width: 33.3333%;
+}
+/* Step 1 - ¿Qué pasa si aplicamos un align self a cualquiera de estos elementos? */
+.box1 {
+  padding-bottom: 100px;
+  align-self: stretch;
+}
+
+.box4 {
+  padding-bottom: 200px;
+}
+
+.box8 {
+  padding-bottom: 0;
+  align-self: flex-end;
 }
