--- a/mobile-reordering/style.css
+++ b/mobile-reordering/style.css
@@ -30,12 +30,33 @@ a:hover {
   background:rgba(0,0,0,0.3);
 }
 
+.toggleNav {
+  display: none;
+}
+
+img {
+  width:100%;
+}
+
 .wrapper {
   max-width: 1000px;
   margin: 0 auto;
-  padding:50px;
 }
 
+input {
+  padding:10px;
+  border:0;
+}
+
+
+section, footer {
+  text-align: center;
+  background:rgba(0,0,0,0.2);
+  padding:20px;
+  margin:20px 0;
+  color:white;
+  font-weight: 100;
+}
 
 /* Flex Container */
 .flex-nav ul {
@@ -43,16 +64,13 @@ a:hover {
   list-style: none;
   margin: 0;
   padding: 0;
-  
 }
-
 
 @media all and (max-width:1000px) {
-  
 
 }
+
 
 @media all and (max-width:500px) {
   
-
 }
